--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     #wrapper { display: flex; flex-direction: column; width: 800px; }
     #nav-menu ul { display: flex; justify-content: space-between; }
     .func-links { margin-top: 2rem; }
-    .list li { margin: 1rem 0; }
+    .list li { margin: .5rem 0; }
     footer { margin-top: 3rem; }
   </style>
 </head>
