--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,11 +1,19 @@
 <h1><a href="/">AirBnB CodeChallenge</a></h1>
 
 <nav id="nav-menu">
-  <ul>
+  <ul id="nav-auth">
+    {% if user.is_authenticated %}
+      <li><a href="{% url 'users:logout' %}">Log out</a></li>
+    {% else %}
+      <li><a href="{% url 'users:login' %}">Log in</a></li>
+      <li><a href="{% url 'users:signup' %}">Sign up</a></li>
+    {% endif %}
+  </ul>
+  <ul id="nav-top">
     <li><a href="/movies">Movies</a></li>
     <li><a href="/books">Books</a></li>
     <li><a href="/people">People</a></li>
     <li><a href="/genres/action/">Genres</a></li>
     <li><a href="/search">Search</a></li>
-   </ul>
+  </ul>
 </nav>
